--- a/samples/animatedGIF.html
+++ b/samples/animatedGIF.html
@@ -72,11 +72,18 @@ function ok()
 	}
 	// use ajax to get the svg file from the server
 	xhr=new XMLHttpRequest();
+	xhr.acjkTarget=target;
 	xhr.onreadystatechange=function()
 	{
+		var s;
 		if ((xhr.readyState==4)&&(xhr.status==200))
 		{
-			generateAnimatedGifFromSvg(xhr.responseText,target,1000);
+			s=xhr.responseText;
+			if (s.match(/make-me-a-hanzi/)||s.match(/<svg[\s\S]+class="acjk"/))
+			{
+				generateAnimatedGifFromSvg(s,xhr.acjkTarget,1000);
+			}
+			else status(msg[4]);
         }
         else if ((xhr.readyState==4)&&(xhr.status==404))
         {
