--- a/samples/imageFactory.html
+++ b/samples/imageFactory.html
@@ -84,7 +84,7 @@ function ok2(input)
 }
 </script>
 <style>
-#a,#b {display:inline-block;width:300px;height:300px;border:1px solid #ccc;}
+#a,#b {display:inline-block;width:300px;height:300px;border:1px solid #ccc;background:#eef;}
 #status {color:#c00;}
 input {font-size:1em;}
 </style>
