--- a/samples/imageFactory.html
+++ b/samples/imageFactory.html
@@ -35,9 +35,13 @@ function ok()
     // get data from the input field
 	data=document.getElementById("data").value;
 	if (!data) {status("No data!"); return;}
+    // svgs folder of this demo contains MakeMeAHanzi svg files
+    // svgs folder contains only 鼠貓牛虎兔龍蛇馬羊猴雞狗 at the moment
+    // but the same code works with animCJK svg files
+    file="../"+svgsDir+"/"+data.codePointAt(0)+".svg";
 	// use ajax to get the svg file from the server
 	xhr=new XMLHttpRequest();
-	xhr.acjk={a:a,b:b,c:c,d:d,data:data};
+	xhr.acjk={a:a,b:b,c:c,d:d,data:data,file:file};
 	xhr.onreadystatechange=function()
 	{
 		var s;
@@ -58,9 +62,6 @@ function ok()
         else if ((xhr.readyState==4)&&(xhr.status==404))
         	status("Svg not found in svgs repository!");
     };
-    // svgs folder of this demo contains MakeMeAHanzi svg files
-    // but the same code works with animCJK svg files
-    file="../"+svgsDir+"/"+data.codePointAt(0)+".svg";
   	xhr.open("GET",file,true);
   	xhr.send();
 }
@@ -144,9 +145,9 @@ input {font-size:1em;}
 <h1>Image factory</h1>
 <div class="dirSelector">
 <p>Select a repository:</p>
-<label><input checked type="radio" name="changeDir" value="1" onclick="changeDir('svgs')"> svgs (MakeMeAHanzi)</label>
-<label><input type="radio" name="changeDir" value="2" onclick="changeDir('svgsJa')"> svgsJa (AnimCJK)</label>
-<label><input type="radio" name="changeDir" value="3" onclick="changeDir('svgsZhHans')"> svgsZhHans (AnimCJK)</label>
+<label><input checked type="radio" name="changeDir" value="1" onclick="changeDir('svgs')"> svgs (from MakeMeAHanzi, contains only 鼠貓牛虎兔龍蛇馬羊猴雞狗)</label>
+<label><input type="radio" name="changeDir" value="2" onclick="changeDir('svgsJa')"> svgsJa (from AnimCJK, 2998 characters)</label>
+<label><input type="radio" name="changeDir" value="3" onclick="changeDir('svgsZhHans')"> svgsZhHans (from AnimCJK, 7000 characters)</label>
 </div>
 <div>
 <input id="data" type="text" maxlength="1" value="馬" placeholder="Enter a character here">
