--- a/samples/imageFactory.html
+++ b/samples/imageFactory.html
@@ -9,13 +9,20 @@ on the fly from AnimCJK or MakeMeAHanzi SVG files">
 <script src="_js/Animated_GIF.js"></script>
 <script src="_js/magicAcjk.js"></script>
 <script>
-function status(s) {document.getElementById('status').innerHTML=s;}
 var svgsDir="svgs";
+function status(s) {document.getElementById('status').innerHTML=s;}
 function changeDir(dir) {svgsDir=dir;}
+function showAnimatedGif(image,background)
+{
+	if (background=="transparent")
+		document.getElementById("d").innerHTML="<img src=\""+image+"\">";
+	else
+		document.getElementById("c").innerHTML="<img src=\""+image+"\">";
+}
 function ok()
 {
 	// do what is necessary when a user clicked on "create" input
-	var data,xhr,file,a,b,c,d;
+	var data,xhr,file,a,b,c,d,dec;
 	// reset display
 	status(" ");
 	a=document.getElementById('a');
@@ -35,27 +42,30 @@ function ok()
     // get data from the input field
 	data=document.getElementById("data").value;
 	if (!data) {status("No data!"); return;}
+	dec=data.codePointAt(0);
     // svgs folder of this demo contains MakeMeAHanzi svg files
     // svgs folder contains only 鼠貓牛虎兔龍蛇馬羊猴雞狗 at the moment
     // but the same code works with animCJK svg files
-    file="../"+svgsDir+"/"+data.codePointAt(0)+".svg";
+    file="../"+svgsDir+"/"+dec+".svg";
 	// use ajax to get the svg file from the server
 	xhr=new XMLHttpRequest();
-	xhr.acjk={a:a,b:b,c:c,d:d,data:data,file:file};
+	xhr.acjk={a:a,b:b,c:c,d:d,data:data,file:file,dec:dec};
 	xhr.onreadystatechange=function()
 	{
-		var s;
+		var s,a,b;
 		if ((xhr.readyState==4)&&(xhr.status==200))
 		{
 			s=xhr.responseText;
 			// check the response (some servers may return an error page here)
-			if (s.match(/make-me-a-hanzi/)||s.match(/<svg[\s\S]+class="acjk"/))
+			if (s.match(/make-me-a-hanzi/)||s.match(/<svg[\s\S]+class="acjk/))
 			{
-				generateRedPngFromSvg(s,xhr.acjk.a,"transparent");
-				generateRedPngFromSvg(s,xhr.acjk.b,"white");
-				generateAnimatedGifFromSvg(s,xhr.acjk.c,1000,"white");
-				generateAnimatedGifFromSvg(s,xhr.acjk.d,1000,"transparent");
-				status("Svg file name: "+xhr.acjk.data.codePointAt(0)+".svg");
+				a=generateRedPngFromSvg(s,300,"transparent");
+				xhr.acjk.a.innerHTML="<img src=\""+a+"\">";
+				b=generateRedPngFromSvg(s,300,"transparent");
+				xhr.acjk.b.innerHTML="<img src=\""+b+"\">";
+				generateAnimatedGifFromSvg(s,300,"white",1000,xhr.acjk.dec,showAnimatedGif,"");
+				generateAnimatedGifFromSvg(s,300,"transparent",1000,xhr.acjk.dec,showAnimatedGif,"");
+				status("Svg file name: "+xhr.acjk.dec+".svg");
 			}
 			else status("Svg not found in svgs repository!");
         }
@@ -135,6 +145,7 @@ function ok2(input)
 	top:100%;
 	content:'Animated GIF without grey strokes';
 }
+#a img,#b img,#c img,#d img {display:block;}
 #status {color:#c00;}
 input {font-size:1em;}
 .dirSelector {margin-bottom:1em;}
