improve imageFactory.html sample

--- a/samples/imageFactory.html
+++ b/samples/imageFactory.html
@@ -200,7 +200,7 @@ input {font-size:1em;}
 <label><input type="radio" name="changeDir" value="3" onclick="changeDir('svgsZhHans')"> svgsZhHans (from AnimCJK, 7000 characters)</label>
 </div>
 <div class="dirSelector">
-<label><input id="brush" type="checkbox" disabled checked> Brush effect</label>
+<label><input id="brush" type="checkbox" disabled checked> Brush effect (for AnimCJK files only)</label>
 </div>
 <div class="dirSelector">
 <input id="data" type="text" maxlength="1" value="馬" placeholder="Enter a character here">
