--- a/samples/animatedGIF.html
+++ b/samples/animatedGIF.html
@@ -33,7 +33,7 @@ function switchSection()
 {
 	ok();
 }
-function showAnimatedGif(image,background)
+function showAnimatedGif(image,background,dec)
 {
 	document.getElementById("a").innerHTML="<img src=\""+image+"\">";
 }
