--- a/samples/animeSeveral.html
+++ b/samples/animeSeveral.html
@@ -62,10 +62,12 @@ function magicSubstring(s,k1,k2)
 function cleanData(e)
 {
 	// keep no more than 4 characters
+	// don't put this function as oninput function of input element
+	// because it disturbs asian language IME
 	var data;
 	data=e.value;
 	// \u200B-\u200D\uFEFF are the zero-length characters
-	data=data.replace(/[\u0000-\u2e7f]/g,"");
+	data=data.replace(/[0-9+*.:?!\s\u200B-\u200D\uFEFF]/g,'');
 	data=magicSubstring(data,0,4);
 	e.value=data;
 }
@@ -303,6 +305,7 @@ function ok()
 	status(msg[0]);
 	document.getElementById('a').innerHTML=""; // destroy previous iframes
     // get data from the input field
+    cleanData(document.getElementById("data"));
 	data=document.getElementById("data").value;
 	if (!data)
 	{
@@ -357,7 +360,7 @@ function doIt(e)
 <label><input id="zhHansRadio" type="radio" name="sectionSwitch" onclick="switchSection()"> Simplifed Chinese (HSK hanzi)</label>
 <label><input id="zhHantRadio" type="radio" name="sectionSwitch" onclick="switchSection()"> Traditional Chinese (HSK hanzi)</label>
 </div>
-<input id="data" type="text" value="" placeholder="Enter data here" oninput="cleanData(this)">
+<input id="data" type="text" value="" maxlength="23" placeholder="Enter data here">
 <input id="ok" type="button" value="Run" onclick="ok()">
 </div>
 <p id="status"><script>document.write(msg[0]);</script></p>
