--- a/samples/imageFactory.html
+++ b/samples/imageFactory.html
@@ -10,7 +10,7 @@ on the fly from AnimCJK or MakeMeAHanzi SVG files">
 <script src="_js/magicAcjk.js"></script>
 <script src="_js/brushingAcjk.js"></script>
 <script>
-var svgsDir="svgsJa";
+var svgsDir="../svgsJa";
 function debug(s,a)
 {
 	return;
@@ -85,7 +85,7 @@ function ok()
     // svgs folder of this demo contains MakeMeAHanzi svg files
     // svgs folder contains only 鼠貓牛虎兔龍蛇馬羊猴雞狗 at the moment
     // but the same code works with any MakeMeAHanzi or animCJK svg files
-    file="../"+svgsDir+"/"+dec+".svg";
+    file=svgsDir+"/"+dec+".svg";
 	// use ajax to get the svg file from the server
 	xhr=new XMLHttpRequest();
 	xhr.acjk={a:a,b:b,c:c,d:d,e:e,data:data,file:file,dec:dec};
@@ -220,8 +220,8 @@ input {font-size:1em;}
 <h1>Image factory</h1>
 <div class="dirSelector">
 <p>Select a repository:</p>
-<label><input checked type="radio" name="changeDir" value="1" onclick="changeDir('svgsJa')"> svgsJa (from AnimCJK, 2998 characters)</label>
-<label><input type="radio" name="changeDir" value="2" onclick="changeDir('svgsZhHans')"> svgsZhHans (from AnimCJK, 7000 characters)</label>
+<label><input checked type="radio" name="changeDir" value="1" onclick="changeDir('../svgsJa')"> svgsJa (from AnimCJK, 2998 characters)</label>
+<label><input type="radio" name="changeDir" value="2" onclick="changeDir('../svgsZhHans')"> svgsZhHans (from AnimCJK, 7000 characters)</label>
 <label><input type="radio" name="changeDir" value="3" onclick="changeDir('svgs')"> svgs (from MakeMeAHanzi, just for testing, contains only 鼠貓牛虎兔龍蛇馬羊猴雞狗)</label>
 </div>
 <div class="dirSelector">
