various minor updates

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ function setGrid(x)
 	{
 		if (!km)
 		{
-			a.className="noBorder";
+			a.classList.add("noBorder");
 			for (k=0;k<6;k++)
 			{
 				e=document.createElement('div');
@@ -346,7 +346,7 @@ function setGrid(x)
 	}
 	else
 	{
-		a.className="";
+		a.classList.remove("noBorder");
 		for (k=0;k<km;k++) a.removeChild(list[k]);
 	}
 }
